--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+# VUE_APP_BASE_API = '/dev-api'
+# VUE_APP_BASE_API = 'http://amap.100pq.cn/laravel/api/admin'
+VUE_APP_BASE_API = 'http://192.168.31.84/api/admin'
+VUE_APP_BASE_BACKEND = 'http://192.168.31.84'
