--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@ ENV = 'production'
 # base api
 # VUE_APP_BASE_API = '/prod-api'
 VUE_APP_BASE_API = 'http://amap.100pq.cn/laravel/api/admin'
-
+VUE_APP_BASE_BACKEND = 'http://amap.100pq.cn/laravel'
