--- a/.env.staging
+++ b/.env.staging
@@ -4,5 +4,6 @@ NODE_ENV = production
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = '/stage-api'
-
+# VUE_APP_BASE_API = '/stage-api'
+VUE_APP_BASE_API = 'http://amap.100pq.cn/laravel/api/admin'
+VUE_APP_BASE_BACKEND = 'http://amap.100pq.cn/laravel'
