--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,4 @@ ENV = 'development'
 # VUE_APP_BASE_API = '/dev-api'
 VUE_APP_BASE_API = 'http://192.168.31.84/api/admin'
 VUE_APP_BASE_BACKEND = 'http://192.168.31.84'
+VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://192.168.31.84:8080/'
