--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@ ENV = 'development'
 
 # base api
 # VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://192.168.31.84/api/admin'
-VUE_APP_BASE_BACKEND = 'http://192.168.31.84'
-VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://192.168.31.84:8080/'
+VUE_APP_BASE_API = 'http://api.4s.nightowl.name/api/admin'
+VUE_APP_BASE_BACKEND = 'http://api.4s.nightowl.name'
+VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
