--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ ENV = 'development'
 # VUE_APP_BASE_API = '/dev-api'
 VUE_APP_BASE_API = 'http://api.4s.nightowl.name/api/admin'
 VUE_APP_BASE_BACKEND = 'http://api.4s.nightowl.name'
+VUE_APP_OSS=https://market4scar.oss-cn-hangzhou.aliyuncs.com
 VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
