--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,12 @@ ENV = 'development'
 # VUE_APP_OSS=http://api.nightowl.name
 # VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
 #  
-VUE_APP_BASE_API = 'http://127.0.0.1:8000/api/admin'
-VUE_APP_BASE_BACKEND = 'http://127.0.0.1:8000'
+#VUE_APP_BASE_API = 'http://127.0.0.1:8000/api/admin'
+#VUE_APP_BASE_BACKEND = 'http://127.0.0.1:8000'
+#VUE_APP_OSS=https://market4scar.oss-cn-hangzhou.aliyuncs.com
+#VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
+
+VUE_APP_BASE_API = 'http://amap.100pq.cn/laravel/api/admin'
+VUE_APP_BASE_BACKEND = 'http://amap.100pq.cn/laravel'
 VUE_APP_OSS=https://market4scar.oss-cn-hangzhou.aliyuncs.com
-VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
+VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://amap.100pq.cn/'
