--- a/.env.production
+++ b/.env.production
@@ -5,5 +5,5 @@ ENV = 'production'
 VUE_APP_BASE_API = 'http://amap.100pq.cn/laravel/api/admin'
 VUE_APP_BASE_BACKEND = 'http://amap.100pq.cn/laravel'
 VUE_APP_OSS=https://market4scar.oss-cn-hangzhou.aliyuncs.com
-VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://amap.100pq.cn/'
+VUE_APP_BASE_ACTIVITY_DOMAIN = 'http://4s.pqbd.top/'
 # VUE_APP_BASE_API = '/prod-api'
